--- a/platformio.ini
+++ b/platformio.ini
@@ -7,14 +7,29 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[common]
+version = 0.1.0
 
-[env:esp32dev]
+[env:development]
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_extra_dirs = ../BombProtocol
-lib_deps = adafruit/Adafruit SSD1306@^2.5.9
+lib_deps = esp32async/ESPAsyncWebServer@^3.6.2
+           adafruit/Adafruit SSD1306@^2.5.9
+lib_extra_dirs = ../bomb-protocol
+build_flags = -DAPP_VERSION=\"${common.version}-dev\" -DDEBUG=true -DBAUD_RATE=9600
 
-[env:native]
+[env:release]
+platform = espressif32
+board = esp32dev
+framework = arduino
+lib_deps = reinodovo/BombProtocol@0.3.0
+           adafruit/Adafruit SSD1306@^2.5.9
+build_flags = -DAPP_VERSION=\"${common.version}\"
+
+[env:manual]
 platform = native
 build_src_filter = -<../src> +<../manual>
+lib_deps = reinodovo/BombManualGenerator@0.2.1
+           adafruit/Adafruit SSD1306@^2.5.9
+build_flags = -DAPP_VERSION=\"${common.version}\" -std=c++17
